# ntrviewer-tv

./: gradle.properties
.github/workflows/: main.yml
android/: settings.gradle
android/app/src/main/jni/: CMakeLists.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ntrviewer/hr/: NTRViewerActivity.java
app/src/main/res/values/: strings.xml
